# DegentGroup

./: .env.example  .gitignore  404.html  Dockerfile  DocumentationProgressTracker.md  Makefile  README.md  alembic.ini  docker-compose.yaml  index.html  main.py  pyproject.toml  pytest.ini
.github/workflows/: docs.yml  test.yml
api/agent-model/: index.html
api/artwork-creation/: index.html
api/bargaining-system/: index.html
api/nft-tools/: index.html
api/telegram/: index.html
docs/: mkdocs.yml
docs/docs/: index.md
migrations/: env.py
modules/artwork-creation/: index.html
modules/bargaining/: index.html
modules/proactive-group-agent/: index.html
modules/telegram/: index.html
modules/user-group-agent/: index.html
scripts/: check_balance.sh  check_db.py  check_nft_raw.py  init_db.py  list_nft_test.sh  test.sh  test_class.sh  transfer_nft.sh
search/: search_index.json
services/token-metadata/: .env.example  .gitignore  Dockerfile  README.md  package.json  tsconfig.json
teleAgent/: constants.py  main.py
teleAgent/api/: __init__.py  routes.py  twitter_routes.py
teleAgent/characters/: PabloPicasso.yaml  ReneMagritte.yaml  SalvadorDalí.yaml  VincentVanGogh.yaml
teleAgent/core/: config.py  di.py
teleAgent/daos/: base.py  di.py  exceptions.py
teleAgent/database/: base.py  di.py
teleAgent/integrations/: di.py  telegram.py
teleAgent/logger/: __init__.py  logger.py
teleAgent/models/: agent.py  artwork_critique.py  dialog.py  memory.py  nft.py  twitter_auth.py  wallet.py
teleAgent/services/: agent_service.py  agent_service_fake.py  di.py  interfaces.py  nft_service_fake.py  twitter_agent_service.py  twitter_auth_service.py  wallet_service_fake.py
teleAgent/templates/: twitter_auth.html
teleAgent/test/: common.py  test_periodic_actions.py
tests/api/: health_test.py
tests/core/: di_test.py
tests/integrations/: __init__.py  test_telegram_group.py
tools/arweave/: README.md  check_balance.py  (+2 more)
(+170 files in other folders)
